src/objects/C501_Service_Contact__c.object
<CustomObject>
    <fields>
        <fullName>C501_Additional_Languages__c</fullName>
        <description>CoreId</description>
        <label>Additional Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Age_Calculate__c</fullName>
        <description>CoreId/Module4</description>
        <formula>FLOOR (( TODAY() -  C501_Birthdate__c  ) / 365.2425 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_American_Indian_or_Alaska_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>American Indian or Alaska Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Asian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Asian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Birthdate__c</fullName>
        <description>CoreId - maps to Child+ database; not on page layouts</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Black_or_African_American__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Black or African American</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Chronic_Health_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Chronic Health Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Contact_Id__c</fullName>
        <description>External Contact Id</description>
        <externalId>true</externalId>
        <label>Contact_Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>C501_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Contacts</relationshipLabel>
        <relationshipName>Service_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Currently_Attending_School__c</fullName>
        <description>Module4</description>
        <label>Currently Attending School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Developmental_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Developmental Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Direct_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Direct Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Disability_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Disability Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Disabling_Condition_Special_Needs__c</fullName>
        <description>Module4 - suggest populating via formula or process based on disability related checkboxes</description>
        <label>Disabling Condition / Special Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Disconnected_Youth__c</fullName>
        <description>Module4
Criteria: Age 14 – 24, Not attending school, Not employed; Perhaps set with formula/automation [TBD on automation - might need to get additional criteria based on LIHEAP; build as is for now]</description>
        <label>Disconnected Youth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Education_Level__c</fullName>
        <description>Module4</description>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grades 0-8</fullName>
                </value>
                <value>
                    <fullName>Grades 9-12/Non-Graduate</fullName>
                </value>
                <value>
                    <fullName>High School Graduate/Equivalency Diploma</fullName>
                </value>
                <value>
                    <fullName>12 Grade + Some Post-Secondary</fullName>
                </value>
                <value>
                    <fullName>2 or 4 years College Graduate</fullName>
                </value>
                <value>
                    <fullName>Graduate or other post-secondary school</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Employment_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Employment Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Ethnicity__c</fullName>
        <description>CoreId/Module4; For Module4, combine Unknown and Refused into Unknown.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Gender__c</fullName>
        <description>CoreId/Module4; for Module4, combine T options into Other

This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_HIV_AIDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>HIV/AIDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Health_Insurance__c</fullName>
        <description>Module4</description>
        <label>Health Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Immigration_Status__c</fullName>
        <description>CoreId</description>
        <label>Immigration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immigrant/Refugee</fullName>
                </value>
                <value>
                    <fullName>Not Immigrant/Refugee</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Insurance_Unknown_Not_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Insurance Unknown/Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Last_Name_Other__c</fullName>
        <label>Last Name Other</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Medicaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Medicaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Medicare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Medicare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Mental_Health_Problem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Mental Health Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Military_Health_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Military Health Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Military_Status__c</fullName>
        <description>Module4</description>
        <label>Military Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Veteran</fullName>
                </value>
                <value>
                    <fullName>Active Military</fullName>
                </value>
                <value>
                    <fullName>No Military Service</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Native_Hawaiian_Pacific_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Native Hawaiian / Pacific Islande</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Nickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Partial_Social_Security_Id__c</fullName>
        <description>Partial Social Security Id
IMPORTANT: Do not save the full Social Security Number.  If the full number is required then need to setup a new field with the proper security.</description>
        <label>Partial Social Security Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Physical_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Physical Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Preferred_Language__c</fullName>
        <description>CoreId</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Race_Client_Doesn_t_Know__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Client Doesn&apos;t Know</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Race_Client_Refused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Client Refused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Race_Data_Not_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Data Not Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Race__c</fullName>
        <description>CoreId/Module4</description>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian/Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Bi/Multi-Racial</fullName>
                </value>
                <value>
                    <fullName>Black/African-American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Service_Household_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Current household where service info is located</description>
        <inlineHelpText>Current household where service info is located</inlineHelpText>
        <label>Household</label>
        <referenceTo>C501_Service_Household__c</referenceTo>
        <relationshipLabel>Service Contacts</relationshipLabel>
        <relationshipName>ServiceContacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Service_Id__c</fullName>
        <description>External Service Id</description>
        <externalId>true</externalId>
        <label>Service Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_State_Children_s_Health_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>State Children’s Health Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_State_Health_Insurance_for_Adults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>State Health Insurance for Adults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Substance_Abuse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Substance Abuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_White__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>White</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Work_Status__c</fullName>
        <description>Module4</description>
        <label>Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Migrant Seasonal Farm Worker</fullName>
                </value>
                <value>
                    <fullName>Unemployed (Short-Term, 6 months or less)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (Long-Term, more than 6 months)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (Not in Labor Force)</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Contact</label>
    <nameField>
        <label>Service Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contacts</pluralLabel>
    <recordTypes>
        <fullName>C501_Service_Contact</fullName>
        <active>true</active>
        <label>Service Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>